[package]
name = "find-file"
version = "1.0.1"
authors = ["Bryan Ferris <primummoven@gmail.com>"]

description = "Utility to search a directory subtree for all files of a name and prompting the user to select one"
repository = "https://github.com/saffronsnail/find-file"
license-file = "LICENSE"

[dependencies]
clap = "*"

